--- a/cimug2024/Attachments/index 2024-05-12 15.47.34.excalidraw.md
+++ b/cimug2024/Attachments/index 2024-05-12 15.47.34.excalidraw.md
@@ -29,6 +29,8 @@ SHACL ^DTEaSWEy
 
 ... including your own extensions ^e7k9Lm1q
 
+Physical schemas ^UA7tN5tU
+
 %%
 # Drawing
 ```json
@@ -471,8 +473,8 @@ SHACL ^DTEaSWEy
 		},
 		{
 			"type": "arrow",
-			"version": 244,
-			"versionNonce": 132325656,
+			"version": 252,
+			"versionNonce": 396924118,
 			"index": "b02",
 			"isDeleted": false,
 			"id": "VlyE2lxxuS3WBtfMPHEal",
@@ -482,18 +484,18 @@ SHACL ^DTEaSWEy
 			"roughness": 1,
 			"opacity": 100,
 			"angle": 0,
-			"x": -1329.5904552449617,
-			"y": -570.5853290093298,
+			"x": -1329.5904721008656,
+			"y": -570.5855860913061,
 			"strokeColor": "#1e1e1e",
 			"backgroundColor": "#e9ecef",
-			"width": 104.32042183695262,
-			"height": 1.2880501926318857,
+			"width": 104.32043869285644,
+			"height": 1.2878989574918478,
 			"seed": 720836120,
 			"groupIds": [],
 			"frameId": null,
 			"roundness": null,
 			"boundElements": [],
-			"updated": 1715522288033,
+			"updated": 1715586271008,
 			"link": null,
 			"locked": false,
 			"startBinding": {
@@ -515,8 +517,8 @@ SHACL ^DTEaSWEy
 					0
 				],
 				[
-					104.32042183695262,
-					-1.2880501926318857
+					104.32043869285644,
+					-1.2878989574918478
 				]
 			]
 		},
@@ -765,8 +767,8 @@ SHACL ^DTEaSWEy
 		},
 		{
 			"type": "arrow",
-			"version": 46,
-			"versionNonce": 45071128,
+			"version": 50,
+			"versionNonce": 1008588630,
 			"index": "b0D",
 			"isDeleted": false,
 			"id": "z3Hr8woHW-_O0HXFla0NO",
@@ -787,7 +789,7 @@ SHACL ^DTEaSWEy
 			"frameId": null,
 			"roundness": null,
 			"boundElements": [],
-			"updated": 1715522288033,
+			"updated": 1715586271008,
 			"link": null,
 			"locked": false,
 			"startBinding": {
@@ -813,6 +815,43 @@ SHACL ^DTEaSWEy
 					-1.1178633897644659
 				]
 			]
+		},
+		{
+			"type": "text",
+			"version": 81,
+			"versionNonce": 18286294,
+			"index": "b0E",
+			"isDeleted": false,
+			"id": "UA7tN5tU",
+			"fillStyle": "hachure",
+			"strokeWidth": 2,
+			"strokeStyle": "solid",
+			"roughness": 1,
+			"opacity": 100,
+			"angle": 0,
+			"x": -351.14598867355335,
+			"y": -283.0164872013677,
+			"strokeColor": "#1e1e1e",
+			"backgroundColor": "transparent",
+			"width": 164.93980407714844,
+			"height": 25,
+			"seed": 1834120150,
+			"groupIds": [],
+			"frameId": null,
+			"roundness": null,
+			"boundElements": [],
+			"updated": 1715586278557,
+			"link": null,
+			"locked": false,
+			"fontSize": 20,
+			"fontFamily": 1,
+			"text": "Physical schemas",
+			"rawText": "Physical schemas",
+			"textAlign": "left",
+			"verticalAlign": "top",
+			"containerId": null,
+			"originalText": "Physical schemas",
+			"lineHeight": 1.25
 		}
 	],
 	"appState": {
@@ -830,10 +869,10 @@ SHACL ^DTEaSWEy
 		"currentItemTextAlign": "left",
 		"currentItemStartArrowhead": null,
 		"currentItemEndArrowhead": "arrow",
-		"scrollX": 1568.8334886735533,
-		"scrollY": 1156.0164872013677,
+		"scrollX": 1460.6459886735533,
+		"scrollY": 1037.0164872013677,
 		"zoom": {
-			"value": 0.8
+			"value": 1
 		},
 		"currentItemRoundness": "sharp",
 		"gridSize": null,
