Fixed some typos and broken image

--- a/cimug2024/Attachments/index 2024-05-12 19.55.05.excalidraw.md
+++ b/cimug2024/Attachments/index 2024-05-12 19.55.05.excalidraw.md
@@ -38,6 +38,34 @@ local unique identifier ^eszghltM
 	"elements": [
 		{
 			"type": "rectangle",
+			"version": 560,
+			"versionNonce": 1950991062,
+			"index": "a6",
+			"isDeleted": false,
+			"id": "t5U9Dj2T6CEnoejYHmHZw",
+			"fillStyle": "hachure",
+			"strokeWidth": 2,
+			"strokeStyle": "solid",
+			"roughness": 1,
+			"opacity": 100,
+			"angle": 0,
+			"x": -507.90407456678975,
+			"y": 6.2618526642979475,
+			"strokeColor": "#1e1e1e",
+			"backgroundColor": "#e9ecef",
+			"width": 323.17575757575753,
+			"height": 45.212121212121275,
+			"seed": 906398502,
+			"groupIds": [],
+			"frameId": null,
+			"roundness": null,
+			"boundElements": [],
+			"updated": 1715590567374,
+			"link": null,
+			"locked": false
+		},
+		{
+			"type": "rectangle",
 			"version": 689,
 			"versionNonce": 523456394,
 			"index": "a7",
@@ -519,34 +547,6 @@ local unique identifier ^eszghltM
 			"containerId": null,
 			"originalText": "CURIE",
 			"lineHeight": 1.25
-		},
-		{
-			"type": "rectangle",
-			"version": 558,
-			"versionNonce": 1114571030,
-			"index": "aa",
-			"isDeleted": false,
-			"id": "t5U9Dj2T6CEnoejYHmHZw",
-			"fillStyle": "hachure",
-			"strokeWidth": 2,
-			"strokeStyle": "solid",
-			"roughness": 1,
-			"opacity": 100,
-			"angle": 0,
-			"x": -507.90407456678975,
-			"y": 6.2618526642979475,
-			"strokeColor": "#1e1e1e",
-			"backgroundColor": "#e9ecef",
-			"width": 323.17575757575753,
-			"height": 45.212121212121275,
-			"seed": 906398502,
-			"groupIds": [],
-			"frameId": null,
-			"roundness": null,
-			"boundElements": [],
-			"updated": 1715587808979,
-			"link": null,
-			"locked": false
 		},
 		{
 			"type": "text",
